--- a/style.css
+++ b/style.css
@@ -1,13 +1,55 @@
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: 500;
 }
 
 a {
   color: orange;
 }
-
 a:hover {
   color: black;
 }
-/*# sourceMappingURL=style.css.map */
+
+#demo {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 100px;
+}
+#demo .box {
+  width: 300px;
+  padding: 30px;
+  margin-bottom: 50px;
+  background-color: #9C6644;
+  border-radius: 20px;
+}
+#demo .box h2 {
+  padding-bottom: 30px;
+  color: #ffffff;
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
+}
+#demo .box input {
+  height: 50px;
+  border-radius: 20px;
+  font-size: 20px;
+}
+#demo .box .btn {
+  background-color: #ffffff;
+  font-size: 20px;
+  padding: 10px 25px;
+  margin: 20px 0 0 70px;
+  border-radius: 40px;
+}
+#demo .minibox {
+  margin: 5px 0;
+  padding: 10px 0;
+  width: 230px;
+  border: 2px solid #3d3d3d;
+  border-radius: 30px;
+}
+#demo .minibox h1 {
+  font-size: 25px;
+  color: #000000;
+  text-align: center;
+}/*# sourceMappingURL=style.css.map */
